2006-12-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods): Introduce new method `scpc'.  Remove
	"ControlMaster" option from the other `scp*' methods.
	(tramp-default-method): Check for ssh-agent before setting to
	`scp'.
	(top): Check for `font-lock-add-keywords' before calling; it
	doesn't exist under XEmacs.

2006-12-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-default-method): Before setting to "pscp", check
	whether package password.el is loaded, or Pageant is running.

	* tramp-smb.el (tramp-smb-errors): Add error messages.

2006-12-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-handle-delete-directory)
	(tramp-smb-handle-delete-file): Write a more comprehensive error
	message.  Suggested by Tom Wurgler <twurgl@goodyear.com>.

2006-12-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-errors): Add error messages.
	(tramp-smb-handle-directory-files): Fix check for MATCH.

2006-12-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-get-file-entries):
	`tramp-smb-maybe-open-connection' must still be called when share
	is nil.

2006-12-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-password-prompt-regexp): "Passphrase" is used
	with capital first letter by PuTTY.
	(tramp-message): Add message to debug buffer only when process
	buffer is not killed.  Otherwise, debug buffer name cannot be
	determined.
	(tramp-accept-process-output): Under Win32,
	`accept-process-output' doesn't return sometimes.  So we add an
	additional timeout around.

	* tramp-smb.el (tramp-smb-send-command ): This is the only place
	to call `tramp-smb-maybe-open-connection'.  Remove all other
	calls.
	(tramp-smb-maybe-open-connection): SHARE isn't needed as
	parameter.  We compute it ourselves.
	(tramp-smb-open-connection): Set `process-connection-type', which
	was done in `tramp-smb-maybe-open-connection' before.  Pop up